--- a/EduProject/Web.config
+++ b/EduProject/Web.config
@@ -9,13 +9,14 @@
     <handlers>
       <add name="abcHandler" path="*.abc" verb="GET" type="EduProject.VHandler"/>
     </handlers>
+    <!--
     <modules>
       <add name="RequestModule" type="EduProject.TimerRequestModule"/>
-    </modules>
+    </modules>-->
   </system.webServer>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
+      <compiler language="c#;cs;csharp" extension=".cs" 
         type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
         warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
